# oomai

./: .gitignore  .replit  LICENSE.md  README.md  app.py  app_gpt5.py  app_gpt5_responses_api.py  app_gpt5_responses_api_readonly.py  architecture_diagram.mmd  auth.py  batch.py  chainlit.md  chainlit_xai_util.py  config.py  daily_batch.py  dump_msg.py  main.py  mcp_server.py  mermaid_test.py  pyproject.toml  scraper.py  test.py  test_mcp_server.py  utils.py
.chainlit/: config.toml  config.toml.bak
dashboard/: app.js  index.html  server.py  styles.css
function_tools/: __init__.py  chainlit_graph_ops.py  chainlit_multi_agent_research.py  chainlit_perplexity_search.py  chainlit_x_search.py  core_graph_ops.py  core_multi_agent_research.py  core_perplexity_search.py  core_x_search.py  graph_ops.py  task_ops.py  tool_def.py  visual_ops.py  web_search_brave.py  x_search.py  youtube_transcript.py
knowledge-graph-mcp/: .gitignore  README.md  SKILL.md  config.py  mcp_server.py  pyproject.toml
knowledge-graph-mcp/assets/: mcp-config.json
knowledge-graph-mcp/function_tools/: __init__.py  core_graph_ops.py
knowledge-graph-mcp/knowledge_graph/: OBSOLETE system_prompt_batch_extract_grok3.md  OBSOLETE system_prompt_batch_gpt5.md  OBSOLETE system_prompt_batch_grok4.md  create_idea_with_vector.cypher  emtech.cypher  schema.md  schema_population_guidance.md  system_prompt_grok4.md  system_prompt_grok4_learning.md  system_prompt_grok4_readonly.md  system_prompt_grok4_unhinged_readonly.md  vector_index.cypher
knowledge-graph-mcp/references/: population.md  schema.md
knowledge-graph-mcp/scripts/: start-server.sh
knowledge_graph/: DATA_RESILIENCE.md  OBSOLETE system_prompt_gpt5_readonly.md  OBSOLETE system_prompt_grok4_unhinged_readonly.md  batch_sources.yaml  command_sources.yaml  cypher.bnf  cypher.cfg  query_idea_with_embedding.cypher  schema.md  schema_population_guidance.md  sources.yaml  system_prompt.md  system_prompt_batch_extract_grok3.md  system_prompt_batch_gpt5.md  system_prompt_batch_grok4.md  system_prompt_capture_step2.md  system_prompt_dashboard_step2.md  system_prompt_gpt5.md  system_prompt_gpt5_readonly.md  system_prompt_grok4.md  system_prompt_grok4_learning.md  system_prompt_grok4_readonly.md  system_prompt_grok4_readonly_unhinged.md  system_prompt_grok4_unhinged_readonly.md  system_prompt_readonly_step1.md  system_prompt_readonly_step2.md  system_prompt_readonly_step2_capture.md  (+3 more)
x-search-mcp/: .gitignore  README.md  SKILL.md  mcp_server.py  pyproject.toml  test_mcp_server.py
(+66 files in other folders)
