[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.6.2",
    "neo4j>=5.28.1",
    "openai>=1.97.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "xai-sdk>=1.0.0",
    "groq>=0.30.0",
    "elevenlabs>=2.9.1",
]
