[project]
name = "knowledge-graph-mcp"
version = "1.0.0"
description = "MCP server for Neo4j knowledge graph of emerging technologies"
authors = [
    {name = "Tamas Simon", email = "tamas.simon@warmersun.com"}
]
readme = "SKILL.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.9.0",
    "neo4j>=5.28.1",
    "openai>=1.97.0",
    "pydantic>=2.11.7",
    "lark>=1.2.2",
    "python-dotenv>=1.1.1",
]

[project.scripts]
knowledge-graph-mcp = "mcp_server:mcp.run"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["function_tools*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.cfg", "*.cypher", "*.yaml"]
